css/styles.css
/* BASE */


body {
	background-color: #99ffff;
	font-family: "PT Sans", helvetica, sans-serif;
}


h1, h2, h3 {
	font-family: "Merriweather", serif;
}

form .box {
	margin: 10px;
	padding: 3px;
}

form {
	background-color: #00cccc;
	padding: 20px;
}

form a {
	font-weight: bold;
	text-decoration: none;
	color: #004d4d;
}

.main nav {
	position: fixed; /* required - magic */
	top: 0; /* required - makes sure the menu sits where it's supposed to sit */
	z-index: 1000; /* required - makes sure the menu doesn't get covered by anything else */
	width: 100%; /* required - makes the menu go all the way across the viewport */
}

.main li {
	list-style-type: none;
	display: inline-block;
	padding: 10px;
	margin: auto 10px;
}

.main ul {
	text-align: center;
	background-color: #ffff80;
	margin: 0;
	padding-left: 0;
}

.main a {
	text-decoration: none;
	padding: 20px;
	font-weight: bold;
	color: #004d4d;
	font-size: 1.1em;
}

nav a:hover {
	color: #660066;
}

a {
	font-weight: bold;
	color: #004d4d;
}

a:hover {
	color: #660066;
}

h2 a {
	text-decoration: none;
	color: #004d4d;
}

h1 img {
	float: left;
}

h2 a:hover {
	color: #660066;
}

img {
	margin: 10px;
}

footer {
	text-align: center;
	padding: 10px;
}

/* MODULES */


.thumb img {
	float: left;
	max-width: 200px;
	max-height: 200px;
}

.container {
	margin: 0 auto;
	width: 80%;
	max-width: 960px; 
	padding-top: 25px;
}

/*Current Menu Highlight*/

.active {
	background-color: #004d4d;
}

.active a {
	color: #ffff80;
}


/*End Current Menu Highlight*/

.z-area2 {
	padding: 20px;
	background-color: #00cccc;
	text-align: center;
	display: inline-block;
	float: right;
	margin-top: 20px;
	margin-bottom: 10px;
}

.z-area2 a {
	text-decoration: none;
}

.z-area3 p {
	float: left;
	max-width: 65%;
	text-align: left;
	background-color: #00cccc;
	margin: 10px;
	padding: 10px;
}

.z-area4 {
	padding: 30px;
	background-color: #ffff80;
	text-align: center;
	display: inline-block;
	float: right;
	margin-top: 10px;
	font-size: 2em;
}

.z-area4 a {
	text-decoration: none;
}

.f-area1 {
	padding: 10px;
	display: inline-block;
	float: left;
}

.f-area2 {
	padding: 10px;
	background-color: #00cccc;
	text-align: center;
	display: inline-block;
	float: right;
	/*margin-top: 20px;
	margin-bottom: 10px;*/
}

.f-area2 a {
	color: #001a00;
	text-decoration: none;
}

.center {
	text-align: center;
}

.f-area3 {
	max-width: 65%;
	display: inline-block;
}

.f-area3 p {
	display: inline;
	padding-top: 10px;
}

.f-area3 img {
	float: left;
	padding-bottom: 30px;
	padding-right: 15px;
}

.f-area3 h3 {
	padding-left: 15px;
	font-weight: bold;
}


.f-area3 h2 {
	text-align: center;
}

.platform-idea {
	width: 100%;
	display: inline-block;
}

.platform-idea ul {
	padding-top: 15px;
	margin-left: 50px;
	padding-left: 20px;
}

.platform-idea img {
	padding-right: 30px;
}

.platform-idea h3 {
	margin-top: 0px;
}

.platform-idea a {
	text-decoration: none;
}
.f-area4 {
	padding: 20px;
	background-color: #00cccc;
	text-align: center;
	display: inline;
	float: right;
	max-width: 28%;
}

.hiking li {
	list-style-type: none;
}

.content {
	text-align: left;
	overflow: auto;
}

.platform-menu {
	z-index: 1000; /* required - makes sure the menu doesn't get covered by anything else */
	width: 100%; /* required - makes the menu go all the way across the viewport */ 
	display: inline-block;

}

.platform-menu ul {
	/* standard removal of UL styles */
	margin: 0;
	padding-left: 0;
	list-style-type: none;
	/* required - get LIs to line-up side-by-side */
	display: flex;
	justify-content: center; /* optional - lookup lots of options */
}

.platform-menu a { 
	/* typical - make links look/act like buttons */
	padding: 15px;
	color: #ffff80;
	text-decoration: none;
}

.logo {
	float: left;
	width: 40%;
	height: auto;
}

.background-photo img {
	max-width: 100%;
}

#intro {
	background-color: #99ffff;
}

#accomplishments {
	background-color: #e6ffff; 
}

